# coding-exercises

./: .gitignore  README.md  block.cpp  in.in  main  push.sh  suffix array.cpp  temp  template.cpp
Leetcode/: paths with maximum minimal value.py  three equal parts.py
MPI/: mpi_hello_world  mpi_hello_world.c
apue/: abcd.c  alarm.c  alarm_2_second.c  alarm_pause.c  crypt.c  daemon.cpp  dup.c  environ  environ.c  exec.c  fork.c  fork_exec.c  glob.c  main  mmap.c  mmap_ipc.c  myshell.c  openmp_parallel.c  pthread.c  pthread_prime.c  relay  setid.c  signal.c  state_machine.c  system.c  usefork.c
bash/: A Personalized echo.sh  LoopAndSkipping.sh  The world of numbers.sh  arithmetic operation.sh  array.sh  awk-3.sh  comparing numbers.sh  conditions.sh  cut-1.sh  sort-1.sh  tr-1.sh  uniq-1.sh
c++/: muduo_server.cpp
c++/muduo/: CMakeLists.txt  Channel.cc  Channel.h  EventLoop.h  InetAddress.cc  InetAddress.h  Logger.cc  Logger.h  TcpServer.h  Timestamp.cc  Timestamp.h  main  noncopyable.h
c++/mysql线程池/demo/: CMakeCache.txt  CMakeLists.txt  CommonConnectionPool.cpp  CommonConnectionPool.h  Connection.cpp  Connection.h  Makefile  cmake_install.cmake  main  main.cpp  mysql.ini
c++/nginx内存池/: CMakeLists.txt  nginx_mem_pool.cpp  nginx_mem_pool.h  test_nginx_pool.cpp
c++/nginx内存池/nginx-1.12.2/objs/: Makefile  autoconf.err  nginx  ngx_auto_config.h
codewar/: break_pieces.cpp  explorative_sum.cpp  large_factorial.cpp  main  parse_int_reloaded.py  the lift.cpp
nowcoder/: 任务分配.cpp
剑指offer/: quickMult.cpp  不修改找出重复的数字.cpp  不用运算符进行加法.cpp  两个链表的相交的第一个节点.cpp  二叉树的下一个节点.cpp  (+9 more)
(+1330 files in other folders)
